--- a/Registry.toml
+++ b/Registry.toml
@@ -4,3 +4,4 @@ repo = "https://github.com/ITensor/JuliaRegistry"
 description = "Private registry for unreleased or unfinished ITensors packages"
 
 [packages]
+7e5a90cf-f82e-492e-a09b-e3e26432c138 = { name = "TypeParameterAccessors", path = "T/TypeParameterAccessors" }
