--- a/Registry.toml
+++ b/Registry.toml
@@ -4,4 +4,5 @@ repo = "https://github.com/ITensor/JuliaRegistry"
 description = "Private registry for unreleased or unfinished ITensors packages"
 
 [packages]
+42b3faec-625b-4613-8ddc-352bf9672b8d = { name = "UnspecifiedTypes", path = "U/UnspecifiedTypes" }
 7e5a90cf-f82e-492e-a09b-e3e26432c138 = { name = "TypeParameterAccessors", path = "T/TypeParameterAccessors" }
