--- a/Registry.toml
+++ b/Registry.toml
@@ -4,6 +4,7 @@ repo = "https://github.com/ITensor/ITensorRegistry"
 description = "Private registry for unreleased or unfinished ITensors packages"
 
 [packages]
+3d388ab1-018a-49f4-ae50-18094d5f71ea = { name = "ITensorPkgSkeleton", path = "I/ITensorPkgSkeleton" }
 42b3faec-625b-4613-8ddc-352bf9672b8d = { name = "UnspecifiedTypes", path = "U/UnspecifiedTypes" }
 4a4adec5-520f-4750-bb37-d5e66b4ddeb2 = { name = "BroadcastMapConversion", path = "B/BroadcastMapConversion" }
 7e5a90cf-f82e-492e-a09b-e3e26432c138 = { name = "TypeParameterAccessors", path = "T/TypeParameterAccessors" }
