--- a/D/Derive/Package.toml
+++ b/D/Derive/Package.toml
@@ -1,3 +1,3 @@
 name = "Derive"
 uuid = "a07dfc7f-7d04-4eb5-84cc-a97f051f655a"
-repo = "https@github.com:ITensor/Derive.jl.git"
+repo = "https://github.com/ITensor/Derive.jl.git"
