--- a/D/Derive/Versions.toml
+++ b/D/Derive/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "1ad7731a160496c866f1e299293d03977924cfd8"
+
+["0.2.0"]
+git-tree-sha1 = "7e0301604cebd9e34745a02f37fe79e1fd235a4d"
