New version: ITensorPkgSkeleton v0.2.0
UUID: 3d388ab1-018a-49f4-ae50-18094d5f71ea
Repo:
Tree: d93b8023c911abfb42cfcb14a9d21a158a117dd0

--- a/I/ITensorPkgSkeleton/Versions.toml
+++ b/I/ITensorPkgSkeleton/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "af0a95c454271781c81661a55cfe20668a1f7618"
+
+["0.2.0"]
+git-tree-sha1 = "d93b8023c911abfb42cfcb14a9d21a158a117dd0"
