--- a/Registry.toml
+++ b/Registry.toml
@@ -10,3 +10,4 @@ description = "Private registry for unreleased or unfinished ITensors packages"
 4a4adec5-520f-4750-bb37-d5e66b4ddeb2 = { name = "BroadcastMapConversion", path = "B/BroadcastMapConversion" }
 7e5a90cf-f82e-492e-a09b-e3e26432c138 = { name = "TypeParameterAccessors", path = "T/TypeParameterAccessors" }
 a07dfc7f-7d04-4eb5-84cc-a97f051f655a = { name = "Derive", path = "D/Derive" }
+f856a3a6-4152-4ec4-b2a7-02c1a55d7993 = { name = "LabelledNumbers", path = "L/LabelledNumbers" }
