New version: Derive v0.3.0
UUID: a07dfc7f-7d04-4eb5-84cc-a97f051f655a
Repo:
Tree: 2450a7d984856fbc53bf24f992c28e755ae1536a

--- a/D/Derive/Versions.toml
+++ b/D/Derive/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "1ad7731a160496c866f1e299293d03977924cfd8"
 
 ["0.2.0"]
 git-tree-sha1 = "7e0301604cebd9e34745a02f37fe79e1fd235a4d"
+
+["0.3.0"]
+git-tree-sha1 = "2450a7d984856fbc53bf24f992c28e755ae1536a"
