--- a/D/Derive/Compat.toml
+++ b/D/Derive/Compat.toml
@@ -3,3 +3,8 @@ Adapt = "4.1.1 - 4"
 ExproniconLite = "0.10.13 - 0.10"
 MLStyle = "0.4.17 - 0.4"
 julia = "1.10.0 - 1"
+
+["0.3 - 0"]
+ArrayLayouts = "1.11.0 - 1"
+BroadcastMapConversion = "0.1"
+LinearAlgebra = "1.10.0 - 1"
