--- a/D/Derive/Deps.toml
+++ b/D/Derive/Deps.toml
@@ -3,3 +3,8 @@ Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 ExproniconLite = "55351af7-c7e9-48d6-89ff-24e801d99491"
 MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 TypeParameterAccessors = "7e5a90cf-f82e-492e-a09b-e3e26432c138"
+
+["0.3 - 0"]
+ArrayLayouts = "4c555306-a7a7-4459-81d9-ec55ddd5c99a"
+BroadcastMapConversion = "4a4adec5-520f-4750-bb37-d5e66b4ddeb2"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
