--- a/B/BroadcastMapConversion/Versions.toml
+++ b/B/BroadcastMapConversion/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "cc31c630d338a267c8ec647ae196a101c678aa88"
+
+["0.1.1"]
+git-tree-sha1 = "977fb6a1b324635c97073852c727b78c7bd53de3"
