--- a/Registry.toml
+++ b/Registry.toml
@@ -8,6 +8,7 @@ description = "Private registry for unreleased or unfinished ITensors packages"
 3ce3220d-c6cb-4fcd-b3c1-56d9c50edbe5 = { name = "NewPkg", path = "N/NewPkg" }
 3d388ab1-018a-49f4-ae50-18094d5f71ea = { name = "ITensorPkgSkeleton", path = "I/ITensorPkgSkeleton" }
 42b3faec-625b-4613-8ddc-352bf9672b8d = { name = "UnspecifiedTypes", path = "U/UnspecifiedTypes" }
+43c9e47c-e622-40fb-bf18-a09fc8c466b6 = { name = "UnallocatedArrays", path = "U/UnallocatedArrays" }
 4a4adec5-520f-4750-bb37-d5e66b4ddeb2 = { name = "BroadcastMapConversion", path = "B/BroadcastMapConversion" }
 7e5a90cf-f82e-492e-a09b-e3e26432c138 = { name = "TypeParameterAccessors", path = "T/TypeParameterAccessors" }
 a07dfc7f-7d04-4eb5-84cc-a97f051f655a = { name = "Derive", path = "D/Derive" }
