--- a/D/Derive/Versions.toml
+++ b/D/Derive/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "2450a7d984856fbc53bf24f992c28e755ae1536a"
 
 ["0.3.1"]
 git-tree-sha1 = "e440dc9675e116d1b10547ec99d873203a6b8c58"
+
+["0.3.2"]
+git-tree-sha1 = "e8d1f35cb2e903c0ef010c520e2f44b19d855576"
