--- a/Registry.toml
+++ b/Registry.toml
@@ -14,4 +14,5 @@ description = "Private registry for unreleased or unfinished ITensors packages"
 a07dfc7f-7d04-4eb5-84cc-a97f051f655a = { name = "Derive", path = "D/Derive" }
 e2de450a-8a67-46c7-b59c-01d5a3d041c5 = { name = "GradedUnitRanges", path = "G/GradedUnitRanges" }
 f856a3a6-4152-4ec4-b2a7-02c1a55d7993 = { name = "LabelledNumbers", path = "L/LabelledNumbers" }
+f8a8ad64-adbc-4fce-92f7-ffe2bb36a86e = { name = "SymmetrySectors", path = "S/SymmetrySectors" }
 f9fb0810-3969-484c-b54e-62935ba8ba22 = { name = "ITensorEntropyTools", path = "I/ITensorEntropyTools" }
