--- a/Registry.toml
+++ b/Registry.toml
@@ -4,6 +4,7 @@ repo = "https://github.com/ITensor/ITensorRegistry"
 description = "Private registry for unreleased or unfinished ITensors packages"
 
 [packages]
+0d5efcca-f356-4864-8770-e1ed8d78f208 = { name = "SparseArraysBase", path = "S/SparseArraysBase" }
 2c2a8ec4-3cfc-4276-aa3e-1307b4294e58 = { name = "NestedPermutedDimsArrays", path = "N/NestedPermutedDimsArrays" }
 3ce3220d-c6cb-4fcd-b3c1-56d9c50edbe5 = { name = "NewPkg", path = "N/NewPkg" }
 3d388ab1-018a-49f4-ae50-18094d5f71ea = { name = "ITensorPkgSkeleton", path = "I/ITensorPkgSkeleton" }
