--- a/S/SparseArraysBase/Versions.toml
+++ b/S/SparseArraysBase/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "c04f666d7e7549d7b0ab95392c83d32145a4dffd"
+
+["0.2.0"]
+git-tree-sha1 = "b7fef8d68e913668aaed8f89f3583ae23d609489"
