--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "3cc4e5b6b47430e9faa2430f61536ea0f7bc6ea1"
 
 ["0.2.0"]
 git-tree-sha1 = "795505ab6c3a9930b1bfbe1e062d8f79d2ab2377"
+
+["0.2.1"]
+git-tree-sha1 = "5fd2f3200252bf61209f9b1dbb946497cf0d64d4"
