New version: TypeParameterAccessors v0.2.0
UUID: 7e5a90cf-f82e-492e-a09b-e3e26432c138
Repo:
Tree: b1dbd3898671e2d9b5c15d6eeaa2787d521881a9

--- a/T/TypeParameterAccessors/Versions.toml
+++ b/T/TypeParameterAccessors/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "a39c53f958691759b9c037fc56ba7c4f35775284"
+
+["0.2.0"]
+git-tree-sha1 = "b1dbd3898671e2d9b5c15d6eeaa2787d521881a9"
