New version: GradedUnitRanges v0.1.1
UUID: e2de450a-8a67-46c7-b59c-01d5a3d041c5
Repo:
Tree: 1ecc950f272ca20a415052f460ccf27973087685

--- a/G/GradedUnitRanges/Versions.toml
+++ b/G/GradedUnitRanges/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "d5135d5eda9f069d8609489e81d8cb37d7779a18"
+
+["0.1.1"]
+git-tree-sha1 = "1ecc950f272ca20a415052f460ccf27973087685"
