New version: SymmetrySectors v0.1.1
UUID: f8a8ad64-adbc-4fce-92f7-ffe2bb36a86e
Repo:
Tree: e15b1202195a6dc83e9de37c99504f1fab0025ee

--- a/S/SymmetrySectors/Compat.toml
+++ b/S/SymmetrySectors/Compat.toml
@@ -1,6 +1,11 @@
 [0]
 BlockArrays = "1.2.0 - 1"
-GradedUnitRanges = "0.1"
 HalfIntegers = "1.6.0 - 1"
 LabelledNumbers = "0.1"
 julia = "1.10.0 - 1"
+
+["0 - 0.1.0"]
+GradedUnitRanges = "0.1"
+
+["0.1.1 - 0"]
+GradedUnitRanges = "0.1.1 - 0.1"
