--- a/S/SymmetrySectors/Versions.toml
+++ b/S/SymmetrySectors/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "e7ed94575666889cd85bcf7c3177a723a679d1ea"
+
+["0.1.1"]
+git-tree-sha1 = "e15b1202195a6dc83e9de37c99504f1fab0025ee"
