--- a/S/SparseArraysBase/Compat.toml
+++ b/S/SparseArraysBase/Compat.toml
@@ -15,4 +15,9 @@ VectorInterface = "0.5"
 ["0.2 - 0"]
 ArrayLayouts = "1.11.0 - 1"
 BroadcastMapConversion = "0.1"
+
+["0.2.0"]
 Derive = "0.3"
+
+["0.2.1 - 0"]
+Derive = "0.3.6 - 0.3"
