New version: DiagonalArrays v0.2.0
UUID: 74fd4be6-21e2-4f6f-823a-4360d37c7a77
Repo:
Tree: abfe9990857925ba3732fe16a91dc57683187e5b

--- a/D/DiagonalArrays/Versions.toml
+++ b/D/DiagonalArrays/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "ebacf01231a97e9d2de6a9abca133a83648be1f5"
+
+["0.2.0"]
+git-tree-sha1 = "abfe9990857925ba3732fe16a91dc57683187e5b"
