--- a/D/DiagonalArrays/Compat.toml
+++ b/D/DiagonalArrays/Compat.toml
@@ -1,7 +1,14 @@
 [0]
 ArrayLayouts = "1.10.4 - 1"
 BroadcastMapConversion = "0.1"
+julia = "1.10.0 - 1"
+
+["0 - 0.1"]
 NestedPermutedDimsArrays = "0.1"
 SparseArraysBase = "0.1"
 TypeParameterAccessors = "0.1"
-julia = "1.10.0 - 1"
+
+["0.2 - 0"]
+Derive = "0.3.6 - 0.3"
+SparseArraysBase = "0.2.1 - 0.2"
+TypeParameterAccessors = "0.2"
