New version: SparseArraysBase v0.2.2
UUID: 0d5efcca-f356-4864-8770-e1ed8d78f208
Repo:
Tree: 0d70c3de37cf92118d56549c2df833c56a316caa

--- a/S/SparseArraysBase/Versions.toml
+++ b/S/SparseArraysBase/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "b7fef8d68e913668aaed8f89f3583ae23d609489"
 
 ["0.2.1"]
 git-tree-sha1 = "10d3309c617ddf5a7817e4d34fa530a791a06a85"
+
+["0.2.2"]
+git-tree-sha1 = "0d70c3de37cf92118d56549c2df833c56a316caa"
