New version: BlockSparseArrays v0.2.2
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: b81179bcea97c86542bd60245996ca7419c70f39

--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "795505ab6c3a9930b1bfbe1e062d8f79d2ab2377"
 
 ["0.2.1"]
 git-tree-sha1 = "5fd2f3200252bf61209f9b1dbb946497cf0d64d4"
+
+["0.2.2"]
+git-tree-sha1 = "b81179bcea97c86542bd60245996ca7419c70f39"
