--- a/B/BlockSparseArrays/Compat.toml
+++ b/B/BlockSparseArrays/Compat.toml
@@ -14,5 +14,11 @@ GPUArraysCore = "0.1"
 ["0.2 - 0"]
 Derive = "0.3.1 - 0.3"
 GradedUnitRanges = "0.1"
+
+["0.2 - 0.2.1"]
 SparseArraysBase = "0.2"
 TypeParameterAccessors = "0.1"
+
+["0.2.2 - 0"]
+SparseArraysBase = "0.2.2 - 0.2"
+TypeParameterAccessors = "0.2"
