New version: BroadcastMapConversion v0.1.2
UUID: 4a4adec5-520f-4750-bb37-d5e66b4ddeb2
Repo:
Tree: f8d4d1035cc2dcebe3da0f409a93a4f11274613a

--- a/B/BroadcastMapConversion/Versions.toml
+++ b/B/BroadcastMapConversion/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "cc31c630d338a267c8ec647ae196a101c678aa88"
 
 ["0.1.1"]
 git-tree-sha1 = "977fb6a1b324635c97073852c727b78c7bd53de3"
+
+["0.1.2"]
+git-tree-sha1 = "f8d4d1035cc2dcebe3da0f409a93a4f11274613a"
