--- a/N/NamedDimsArrays/Compat.toml
+++ b/N/NamedDimsArrays/Compat.toml
@@ -1,10 +1,18 @@
 [0]
 Adapt = "4.1.1 - 4"
-BroadcastMapConversion = "0.1"
 LinearAlgebra = "1.10.0 - 1"
-NestedPermutedDimsArrays = "0.1"
 Random = "1.10.0 - 1"
-SparseArraysBase = "0.1"
 TensorAlgebra = "0.1"
-TypeParameterAccessors = "0.1"
 julia = "1.10.0 - 1"
+
+["0 - 0.1"]
+BroadcastMapConversion = "0.1"
+NestedPermutedDimsArrays = "0.1"
+SparseArraysBase = "0.1"
+TypeParameterAccessors = "0.1"
+
+["0.2 - 0"]
+BroadcastMapConversion = "0.1.2 - 0.1"
+Derive = "0.3.6 - 0.3"
+SimpleTraits = "0.9.4 - 0.9"
+TypeParameterAccessors = "0.2"
