--- a/N/NamedDimsArrays/Deps.toml
+++ b/N/NamedDimsArrays/Deps.toml
@@ -2,8 +2,14 @@
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 BroadcastMapConversion = "4a4adec5-520f-4750-bb37-d5e66b4ddeb2"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-NestedPermutedDimsArrays = "2c2a8ec4-3cfc-4276-aa3e-1307b4294e58"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-SparseArraysBase = "0d5efcca-f356-4864-8770-e1ed8d78f208"
 TensorAlgebra = "68bd88dc-f39d-4e12-b2ca-f046b68fcc6a"
 TypeParameterAccessors = "7e5a90cf-f82e-492e-a09b-e3e26432c138"
+
+["0 - 0.1"]
+NestedPermutedDimsArrays = "2c2a8ec4-3cfc-4276-aa3e-1307b4294e58"
+SparseArraysBase = "0d5efcca-f356-4864-8770-e1ed8d78f208"
+
+["0.2 - 0"]
+Derive = "a07dfc7f-7d04-4eb5-84cc-a97f051f655a"
+SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
