--- a/N/NamedDimsArrays/Versions.toml
+++ b/N/NamedDimsArrays/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "534be2f9885deac21e69141fad1126d71b946237"
+
+["0.2.0"]
+git-tree-sha1 = "3c547223b9ac006ce10933d0e57bb45a5f1b2d2f"
