New version: NamedDimsArrays v0.3.0
UUID: 60cbd0c0-df58-4cb7-918c-6f5607b73fde
Repo:
Tree: 5bcc45f4272b3e86cafb8ff95936a19aeef714f7

--- a/N/NamedDimsArrays/Compat.toml
+++ b/N/NamedDimsArrays/Compat.toml
@@ -16,3 +16,6 @@ BroadcastMapConversion = "0.1.2 - 0.1"
 Derive = "0.3.6 - 0.3"
 SimpleTraits = "0.9.4 - 0.9"
 TypeParameterAccessors = "0.2"
+
+["0.3 - 0"]
+ArrayLayouts = "1.11.0 - 1"
