New version: BroadcastMapConversion v0.1.3
UUID: 4a4adec5-520f-4750-bb37-d5e66b4ddeb2
Repo:
Tree: fa950ab567c5824a66884c1a69b0e317ad9b0b8c

--- a/B/BroadcastMapConversion/Versions.toml
+++ b/B/BroadcastMapConversion/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "977fb6a1b324635c97073852c727b78c7bd53de3"
 
 ["0.1.2"]
 git-tree-sha1 = "f8d4d1035cc2dcebe3da0f409a93a4f11274613a"
+
+["0.1.3"]
+git-tree-sha1 = "fa950ab567c5824a66884c1a69b0e317ad9b0b8c"
