--- a/B/BroadcastMapConversion/Versions.toml
+++ b/B/BroadcastMapConversion/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "f8d4d1035cc2dcebe3da0f409a93a4f11274613a"
 
 ["0.1.3"]
 git-tree-sha1 = "fa950ab567c5824a66884c1a69b0e317ad9b0b8c"
+
+["0.1.4"]
+git-tree-sha1 = "066cf492e4dbfd0ae19da018ed4baa34e0bc900a"
