New version: TypeParameterAccessors v0.2.1
UUID: 7e5a90cf-f82e-492e-a09b-e3e26432c138
Repo: https://github.com/ITensor/TypeParameterAccessors.jl.git
Tree: 9355ad34e59b8e499e5ade86e37aef293dde6d4d

--- a/T/TypeParameterAccessors/Versions.toml
+++ b/T/TypeParameterAccessors/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "a39c53f958691759b9c037fc56ba7c4f35775284"
 
 ["0.2.0"]
 git-tree-sha1 = "b1dbd3898671e2d9b5c15d6eeaa2787d521881a9"
+
+["0.2.1"]
+git-tree-sha1 = "9355ad34e59b8e499e5ade86e37aef293dde6d4d"
