--- a/T/TypeParameterAccessors/WeakDeps.toml
+++ b/T/TypeParameterAccessors/WeakDeps.toml
@@ -1,2 +1,5 @@
 ["0.2 - 0"]
 StridedViews = "4db3bf67-4bd7-4b4e-b153-31dc3fb37143"
+
+["0.2.1 - 0"]
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
