New version: UnallocatedArrays v0.1.2
UUID: 43c9e47c-e622-40fb-bf18-a09fc8c466b6
Repo:
Tree: 94b65c1a93ed6e575c8f5a57b942f1c71eaa43eb

--- a/U/UnallocatedArrays/Versions.toml
+++ b/U/UnallocatedArrays/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "3f8d1781b32ae0204527f5365a38d1259798eea6"
 
 ["0.1.1"]
 git-tree-sha1 = "dbdd4482c0762283bf535728cf8a46621b2374a3"
+
+["0.1.2"]
+git-tree-sha1 = "94b65c1a93ed6e575c8f5a57b942f1c71eaa43eb"
