New version: NamedDimsArrays v0.3.3
UUID: 60cbd0c0-df58-4cb7-918c-6f5607b73fde
Repo:
Tree: b100cb3899bf5235d65cb44b21a2f7fdfb6a599a

--- a/N/NamedDimsArrays/Versions.toml
+++ b/N/NamedDimsArrays/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "51d975a8e568818aad8ee2a0208010cb3265bb8e"
 
 ["0.3.2"]
 git-tree-sha1 = "33e70d5356316e71699df6980a864eafd9dec61d"
+
+["0.3.3"]
+git-tree-sha1 = "b100cb3899bf5235d65cb44b21a2f7fdfb6a599a"
