--- a/I/ITensorBase/Compat.toml
+++ b/I/ITensorBase/Compat.toml
@@ -2,3 +2,10 @@
 BroadcastMapConversion = "0.1.2 - 0.1"
 NamedDimsArrays = "0.3"
 julia = "1.10.0 - 1"
+
+["0.1.1 - 0"]
+Accessors = "0.1.39 - 0.1"
+Derive = "0.3.6 - 0.3"
+FillArrays = "1.13.0 - 1"
+UnallocatedArrays = "0.1.1 - 0.1"
+UnspecifiedTypes = "0.1.1 - 0.1"
