--- a/I/ITensorBase/Deps.toml
+++ b/I/ITensorBase/Deps.toml
@@ -1,3 +1,10 @@
 [0]
 BroadcastMapConversion = "4a4adec5-520f-4750-bb37-d5e66b4ddeb2"
 NamedDimsArrays = "60cbd0c0-df58-4cb7-918c-6f5607b73fde"
+
+["0.1.1 - 0"]
+Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
+Derive = "a07dfc7f-7d04-4eb5-84cc-a97f051f655a"
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
+UnallocatedArrays = "43c9e47c-e622-40fb-bf18-a09fc8c466b6"
+UnspecifiedTypes = "42b3faec-625b-4613-8ddc-352bf9672b8d"
