--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "589bfa9290f9e95e0350df844f1efc6b1ca10019"
+
+["0.1.1"]
+git-tree-sha1 = "b415a3c79627423361d8edb920b3a3eb5b5cc2a5"
