--- a/Registry.toml
+++ b/Registry.toml
@@ -20,6 +20,7 @@ description = "Private registry for unreleased or unfinished ITensors packages"
 a07dfc7f-7d04-4eb5-84cc-a97f051f655a = { name = "Derive", path = "D/Derive" }
 e204200e-d7ba-4b7e-bfa9-053a2e530198 = { name = "WidenableArrays", path = "W/WidenableArrays" }
 e2de450a-8a67-46c7-b59c-01d5a3d041c5 = { name = "GradedUnitRanges", path = "G/GradedUnitRanges" }
+ebd9b9da-f48d-417c-9660-449667d60261 = { name = "MapBroadcast", path = "M/MapBroadcast" }
 f856a3a6-4152-4ec4-b2a7-02c1a55d7993 = { name = "LabelledNumbers", path = "L/LabelledNumbers" }
 f8a8ad64-adbc-4fce-92f7-ffe2bb36a86e = { name = "SymmetrySectors", path = "S/SymmetrySectors" }
 f9fb0810-3969-484c-b54e-62935ba8ba22 = { name = "ITensorEntropyTools", path = "I/ITensorEntropyTools" }
