New version: ITensorBase v0.1.2
UUID: 4795dd04-0d67-49bb-8f44-b89c448a1dc7
Repo:
Tree: 5e2c4ff5992ec44dbfafd1b0d95bfcf00c8df0cf

--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "589bfa9290f9e95e0350df844f1efc6b1ca10019"
 
 ["0.1.1"]
 git-tree-sha1 = "b415a3c79627423361d8edb920b3a3eb5b5cc2a5"
+
+["0.1.2"]
+git-tree-sha1 = "5e2c4ff5992ec44dbfafd1b0d95bfcf00c8df0cf"
