--- a/I/ITensorBase/Compat.toml
+++ b/I/ITensorBase/Compat.toml
@@ -1,11 +1,19 @@
 [0]
-BroadcastMapConversion = "0.1.2 - 0.1"
 NamedDimsArrays = "0.3"
 julia = "1.10.0 - 1"
 
+["0 - 0.1.1"]
+BroadcastMapConversion = "0.1.2 - 0.1"
+
+["0.1.1"]
+Derive = "0.3.6 - 0.3"
+
 ["0.1.1 - 0"]
 Accessors = "0.1.39 - 0.1"
-Derive = "0.3.6 - 0.3"
 FillArrays = "1.13.0 - 1"
 UnallocatedArrays = "0.1.1 - 0.1"
 UnspecifiedTypes = "0.1.1 - 0.1"
+
+["0.1.2 - 0"]
+DerivableInterfaces = "0.3.7 - 0.3"
+MapBroadcast = "0.1.5 - 0.1"
