--- a/S/SparseArraysBase/Compat.toml
+++ b/S/SparseArraysBase/Compat.toml
@@ -14,10 +14,16 @@ VectorInterface = "0.5"
 
 ["0.2 - 0"]
 ArrayLayouts = "1.11.0 - 1"
+
+["0.2 - 0.2.2"]
 BroadcastMapConversion = "0.1"
 
 ["0.2.0"]
 Derive = "0.3"
 
-["0.2.1 - 0"]
+["0.2.1 - 0.2.2"]
 Derive = "0.3.6 - 0.3"
+
+["0.2.3 - 0"]
+DerivableInterfaces = "0.3.7 - 0.3"
+MapBroadcast = "0.1.5 - 0.1"
