--- a/S/SparseArraysBase/Deps.toml
+++ b/S/SparseArraysBase/Deps.toml
@@ -1,6 +1,5 @@
 [0]
 ArrayLayouts = "4c555306-a7a7-4459-81d9-ec55ddd5c99a"
-BroadcastMapConversion = "4a4adec5-520f-4750-bb37-d5e66b4ddeb2"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
@@ -14,5 +13,12 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 TypeParameterAccessors = "7e5a90cf-f82e-492e-a09b-e3e26432c138"
 VectorInterface = "409d34a3-91d5-4945-b6ec-7529ddf182d8"
 
-["0.2 - 0"]
+["0 - 0.2.2"]
+BroadcastMapConversion = "4a4adec5-520f-4750-bb37-d5e66b4ddeb2"
+
+["0.2 - 0.2.2"]
 Derive = "a07dfc7f-7d04-4eb5-84cc-a97f051f655a"
+
+["0.2.3 - 0"]
+DerivableInterfaces = "6c5e35bf-e59e-4898-b73c-732dcc4ba65f"
+MapBroadcast = "ebd9b9da-f48d-417c-9660-449667d60261"
