--- a/S/SparseArraysBase/Versions.toml
+++ b/S/SparseArraysBase/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "10d3309c617ddf5a7817e4d34fa530a791a06a85"
 
 ["0.2.2"]
 git-tree-sha1 = "0d70c3de37cf92118d56549c2df833c56a316caa"
+
+["0.2.3"]
+git-tree-sha1 = "0f96f7f583ea5919aed27e645af5f833fe6f0e43"
