--- a/D/DiagonalArrays/Deps.toml
+++ b/D/DiagonalArrays/Deps.toml
@@ -1,11 +1,16 @@
 [0]
 ArrayLayouts = "4c555306-a7a7-4459-81d9-ec55ddd5c99a"
-BroadcastMapConversion = "4a4adec5-520f-4750-bb37-d5e66b4ddeb2"
 SparseArraysBase = "0d5efcca-f356-4864-8770-e1ed8d78f208"
-TypeParameterAccessors = "7e5a90cf-f82e-492e-a09b-e3e26432c138"
 
 ["0 - 0.1"]
 NestedPermutedDimsArrays = "2c2a8ec4-3cfc-4276-aa3e-1307b4294e58"
 
-["0.2 - 0"]
+["0 - 0.2.0"]
+BroadcastMapConversion = "4a4adec5-520f-4750-bb37-d5e66b4ddeb2"
+TypeParameterAccessors = "7e5a90cf-f82e-492e-a09b-e3e26432c138"
+
+["0.2.0"]
 Derive = "a07dfc7f-7d04-4eb5-84cc-a97f051f655a"
+
+["0.2.1 - 0"]
+DerivableInterfaces = "6c5e35bf-e59e-4898-b73c-732dcc4ba65f"
