--- a/B/BlockSparseArrays/Compat.toml
+++ b/B/BlockSparseArrays/Compat.toml
@@ -12,13 +12,19 @@ julia = "1.10.0 - 1"
 GPUArraysCore = "0.1"
 
 ["0.2 - 0"]
-Derive = "0.3.1 - 0.3"
 GradedUnitRanges = "0.1"
 
 ["0.2 - 0.2.1"]
 SparseArraysBase = "0.2"
 TypeParameterAccessors = "0.1"
 
+["0.2 - 0.2.2"]
+Derive = "0.3.1 - 0.3"
+
 ["0.2.2 - 0"]
 SparseArraysBase = "0.2.2 - 0.2"
 TypeParameterAccessors = "0.2"
+
+["0.2.3 - 0"]
+DerivableInterfaces = "0.3.7 - 0.3"
+MapBroadcast = "0.1.5 - 0.1"
