--- a/B/BlockSparseArrays/Deps.toml
+++ b/B/BlockSparseArrays/Deps.toml
@@ -2,7 +2,6 @@
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 ArrayLayouts = "4c555306-a7a7-4459-81d9-ec55ddd5c99a"
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
-BroadcastMapConversion = "4a4adec5-520f-4750-bb37-d5e66b4ddeb2"
 Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 GradedUnitRanges = "e2de450a-8a67-46c7-b59c-01d5a3d041c5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -17,5 +16,12 @@ LabelledNumbers = "f856a3a6-4152-4ec4-b2a7-02c1a55d7993"
 NestedPermutedDimsArrays = "2c2a8ec4-3cfc-4276-aa3e-1307b4294e58"
 TensorAlgebra = "68bd88dc-f39d-4e12-b2ca-f046b68fcc6a"
 
-["0.2 - 0"]
+["0 - 0.2.2"]
+BroadcastMapConversion = "4a4adec5-520f-4750-bb37-d5e66b4ddeb2"
+
+["0.2 - 0.2.2"]
 Derive = "a07dfc7f-7d04-4eb5-84cc-a97f051f655a"
+
+["0.2.3 - 0"]
+DerivableInterfaces = "6c5e35bf-e59e-4898-b73c-732dcc4ba65f"
+MapBroadcast = "ebd9b9da-f48d-417c-9660-449667d60261"
