--- a/N/NamedDimsArrays/Compat.toml
+++ b/N/NamedDimsArrays/Compat.toml
@@ -12,10 +12,16 @@ SparseArraysBase = "0.1"
 TypeParameterAccessors = "0.1"
 
 ["0.2 - 0"]
-BroadcastMapConversion = "0.1.2 - 0.1"
-Derive = "0.3.6 - 0.3"
 SimpleTraits = "0.9.4 - 0.9"
 TypeParameterAccessors = "0.2"
 
+["0.2 - 0.3.3"]
+BroadcastMapConversion = "0.1.2 - 0.1"
+Derive = "0.3.6 - 0.3"
+
 ["0.3 - 0"]
 ArrayLayouts = "1.11.0 - 1"
+
+["0.3.4 - 0"]
+DerivableInterfaces = "0.3.7 - 0.3"
+MapBroadcast = "0.1.5 - 0.1"
