New version: TensorAlgebra v0.1.1
UUID: 68bd88dc-f39d-4e12-b2ca-f046b68fcc6a
Repo:
Tree: abe57eee5fb3f47d8031c8962f198db17d1ab02b

--- a/T/TensorAlgebra/Versions.toml
+++ b/T/TensorAlgebra/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "c314ffac6c89948d7dcd1fe00ba28b97f8ea2388"
+
+["0.1.1"]
+git-tree-sha1 = "abe57eee5fb3f47d8031c8962f198db17d1ab02b"
