--- a/T/TensorAlgebra/Compat.toml
+++ b/T/TensorAlgebra/Compat.toml
@@ -5,3 +5,6 @@ EllipsisNotation = "1.8.0 - 1"
 LinearAlgebra = "1.10.0 - 1"
 TupleTools = "1.6.0 - 1"
 julia = "1.10.0 - 1"
+
+["0.1.1 - 0"]
+TypeParameterAccessors = "0.2.1 - 0.2"
