--- a/T/TensorAlgebra/Deps.toml
+++ b/T/TensorAlgebra/Deps.toml
@@ -4,3 +4,6 @@ BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
 EllipsisNotation = "da5c29d0-fa7d-589e-88eb-ea29b0a81949"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
+
+["0.1.1 - 0"]
+TypeParameterAccessors = "7e5a90cf-f82e-492e-a09b-e3e26432c138"
