New version: SparseArraysBase v0.2.4
UUID: 0d5efcca-f356-4864-8770-e1ed8d78f208
Repo:
Tree: 95cec5677d5e642369d297074c20f51a550944cb

--- a/S/SparseArraysBase/Compat.toml
+++ b/S/SparseArraysBase/Compat.toml
@@ -27,3 +27,6 @@ Derive = "0.3.6 - 0.3"
 ["0.2.3 - 0"]
 DerivableInterfaces = "0.3.7 - 0.3"
 MapBroadcast = "0.1.5 - 0.1"
+
+["0.2.4 - 0"]
+Accessors = "0.1.41 - 0.1"
