--- a/S/SparseArraysBase/Deps.toml
+++ b/S/SparseArraysBase/Deps.toml
@@ -22,3 +22,6 @@ Derive = "a07dfc7f-7d04-4eb5-84cc-a97f051f655a"
 ["0.2.3 - 0"]
 DerivableInterfaces = "6c5e35bf-e59e-4898-b73c-732dcc4ba65f"
 MapBroadcast = "ebd9b9da-f48d-417c-9660-449667d60261"
+
+["0.2.4 - 0"]
+Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
