New version: BlockSparseArrays v0.2.4
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: de18115a1eedc397c7876b6e9fa9ed48a8e4f141

--- a/B/BlockSparseArrays/Deps.toml
+++ b/B/BlockSparseArrays/Deps.toml
@@ -25,3 +25,6 @@ Derive = "a07dfc7f-7d04-4eb5-84cc-a97f051f655a"
 ["0.2.3 - 0"]
 DerivableInterfaces = "6c5e35bf-e59e-4898-b73c-732dcc4ba65f"
 MapBroadcast = "ebd9b9da-f48d-417c-9660-449667d60261"
+
+["0.2.4 - 0"]
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
