--- a/B/BlockSparseArrays/Compat.toml
+++ b/B/BlockSparseArrays/Compat.toml
@@ -28,3 +28,6 @@ TypeParameterAccessors = "0.2"
 ["0.2.3 - 0"]
 DerivableInterfaces = "0.3.7 - 0.3"
 MapBroadcast = "0.1.5 - 0.1"
+
+["0.2.4 - 0"]
+FillArrays = "1.13.0 - 1"
