--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "b81179bcea97c86542bd60245996ca7419c70f39"
 
 ["0.2.3"]
 git-tree-sha1 = "2dbad9b3dc2cdc6f50b2951b9242c20f1e7f7d7c"
+
+["0.2.4"]
+git-tree-sha1 = "de18115a1eedc397c7876b6e9fa9ed48a8e4f141"
