--- a/S/SparseArraysBase/Versions.toml
+++ b/S/SparseArraysBase/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "95cec5677d5e642369d297074c20f51a550944cb"
 
 ["0.2.5"]
 git-tree-sha1 = "cb4ddf676aec111e4a7519a73781b6a9bd98ecac"
+
+["0.2.6"]
+git-tree-sha1 = "fdac66f3374876fe3d01d7e0bc4d5b236405cd36"
