New version: BlockSparseArrays v0.2.5
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: 3122bb0a11b1a16057633540f3949c059d0ffe59

--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "2dbad9b3dc2cdc6f50b2951b9242c20f1e7f7d7c"
 
 ["0.2.4"]
 git-tree-sha1 = "de18115a1eedc397c7876b6e9fa9ed48a8e4f141"
+
+["0.2.5"]
+git-tree-sha1 = "3122bb0a11b1a16057633540f3949c059d0ffe59"
