New version: DiagonalArrays v0.2.2
UUID: 74fd4be6-21e2-4f6f-823a-4360d37c7a77
Repo: https://github.com/ITensor/DiagonalArrays.jl.git
Tree: 74b26dd5ac918c776caa6a13c8b9989a9d2aa56f

--- a/D/DiagonalArrays/Compat.toml
+++ b/D/DiagonalArrays/Compat.toml
@@ -19,3 +19,6 @@ TypeParameterAccessors = "0.2"
 
 ["0.2.1 - 0"]
 DerivableInterfaces = "0.3.7 - 0.3"
+
+["0.2.2 - 0"]
+LinearAlgebra = "1.10.0 - 1"
