--- a/D/DiagonalArrays/Deps.toml
+++ b/D/DiagonalArrays/Deps.toml
@@ -14,3 +14,6 @@ Derive = "a07dfc7f-7d04-4eb5-84cc-a97f051f655a"
 
 ["0.2.1 - 0"]
 DerivableInterfaces = "6c5e35bf-e59e-4898-b73c-732dcc4ba65f"
+
+["0.2.2 - 0"]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
