--- a/D/DiagonalArrays/Versions.toml
+++ b/D/DiagonalArrays/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "abfe9990857925ba3732fe16a91dc57683187e5b"
 
 ["0.2.1"]
 git-tree-sha1 = "ac6589450ba099f00aa9d74e6e0915b49f56f1bd"
+
+["0.2.2"]
+git-tree-sha1 = "74b26dd5ac918c776caa6a13c8b9989a9d2aa56f"
