New version: DerivableInterfaces v0.3.8
UUID: 6c5e35bf-e59e-4898-b73c-732dcc4ba65f
Repo: https://github.com/ITensor/DerivableInterfaces.jl.git
Tree: 367be1ad2c772c74b315f4f3864eca6f561cc54a

--- a/D/DerivableInterfaces/Versions.toml
+++ b/D/DerivableInterfaces/Versions.toml
@@ -1,2 +1,5 @@
 ["0.3.7"]
 git-tree-sha1 = "5e859e8e7f961c0e63536b353857a4fdb1a87b21"
+
+["0.3.8"]
+git-tree-sha1 = "367be1ad2c772c74b315f4f3864eca6f561cc54a"
