--- a/T/TensorAlgebra/Versions.toml
+++ b/T/TensorAlgebra/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "c314ffac6c89948d7dcd1fe00ba28b97f8ea2388"
 
 ["0.1.1"]
 git-tree-sha1 = "abe57eee5fb3f47d8031c8962f198db17d1ab02b"
+
+["0.1.2"]
+git-tree-sha1 = "86a8dfcbe52a7406632fa6e9be4c311b76141745"
