--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "de18115a1eedc397c7876b6e9fa9ed48a8e4f141"
 
 ["0.2.5"]
 git-tree-sha1 = "3122bb0a11b1a16057633540f3949c059d0ffe59"
+
+["0.2.6"]
+git-tree-sha1 = "2fc73e2e3756211799989895b08078980b8456a2"
