--- a/T/TensorAlgebra/Versions.toml
+++ b/T/TensorAlgebra/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "abe57eee5fb3f47d8031c8962f198db17d1ab02b"
 
 ["0.1.2"]
 git-tree-sha1 = "86a8dfcbe52a7406632fa6e9be4c311b76141745"
+
+["0.1.3"]
+git-tree-sha1 = "b80c90d91576be57d8c8e3db10f25a6382a9df35"
