New version: NamedDimsArrays v0.3.5
UUID: 60cbd0c0-df58-4cb7-918c-6f5607b73fde
Repo:
Tree: c7942ffbec54d985d45938ac55da5f3c484e987b

--- a/N/NamedDimsArrays/Versions.toml
+++ b/N/NamedDimsArrays/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "b100cb3899bf5235d65cb44b21a2f7fdfb6a599a"
 
 ["0.3.4"]
 git-tree-sha1 = "4ca46d28fe6ddb77b7e13978551e074bb4afe0f1"
+
+["0.3.5"]
+git-tree-sha1 = "c7942ffbec54d985d45938ac55da5f3c484e987b"
