New version: SymmetrySectors v0.1.3
UUID: f8a8ad64-adbc-4fce-92f7-ffe2bb36a86e
Repo:
Tree: 0dd1adee246747bec9f89f6b7c2b40a3340c7214

--- a/S/SymmetrySectors/Versions.toml
+++ b/S/SymmetrySectors/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "e7ed94575666889cd85bcf7c3177a723a679d1ea"
 
 ["0.1.1"]
 git-tree-sha1 = "e15b1202195a6dc83e9de37c99504f1fab0025ee"
+
+["0.1.3"]
+git-tree-sha1 = "0dd1adee246747bec9f89f6b7c2b40a3340c7214"
