--- a/T/TensorAlgebra/Versions.toml
+++ b/T/TensorAlgebra/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "86a8dfcbe52a7406632fa6e9be4c311b76141745"
 
 ["0.1.3"]
 git-tree-sha1 = "b80c90d91576be57d8c8e3db10f25a6382a9df35"
+
+["0.1.4"]
+git-tree-sha1 = "75794fd65f979c8b455e582af86cad5d99f0fe1b"
