--- a/I/ITensorPkgSkeleton/Package.toml
+++ b/I/ITensorPkgSkeleton/Package.toml
@@ -1,3 +1,3 @@
 name = "ITensorPkgSkeleton"
 uuid = "3d388ab1-018a-49f4-ae50-18094d5f71ea"
-repo = "https://github.com/ITensor/ITensorPkgSkeleton.jl.git"
+repo = "https://github.com/ITensor/ITensorPkgSkeleton.jl"
