New version: TensorAlgebra v0.1.5
UUID: 68bd88dc-f39d-4e12-b2ca-f046b68fcc6a
Repo:
Tree: 8db3c95953253fe3affc7c018ba2419e883b7e5c

--- a/T/TensorAlgebra/Versions.toml
+++ b/T/TensorAlgebra/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "b80c90d91576be57d8c8e3db10f25a6382a9df35"
 
 ["0.1.4"]
 git-tree-sha1 = "75794fd65f979c8b455e582af86cad5d99f0fe1b"
+
+["0.1.5"]
+git-tree-sha1 = "8db3c95953253fe3affc7c018ba2419e883b7e5c"
