--- a/S/SparseArraysBase/Versions.toml
+++ b/S/SparseArraysBase/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "0577e4058b811d13976c4d5391faab95295c90df"
 
 ["0.2.8"]
 git-tree-sha1 = "281c224c6ac44e0589235785e67b1625594a6b5c"
+
+["0.2.9"]
+git-tree-sha1 = "17835c9beb7658cc922db528e85467ff0e1da660"
