--- a/B/BlockSparseArrays/Compat.toml
+++ b/B/BlockSparseArrays/Compat.toml
@@ -26,8 +26,14 @@ SparseArraysBase = "0.2.2 - 0.2"
 TypeParameterAccessors = "0.2"
 
 ["0.2.3 - 0"]
-DerivableInterfaces = "0.3.7 - 0.3"
 MapBroadcast = "0.1.5 - 0.1"
+
+["0.2.3 - 0.2.6"]
+DerivableInterfaces = "0.3.7 - 0.3"
 
 ["0.2.4 - 0"]
 FillArrays = "1.13.0 - 1"
+
+["0.2.8 - 0"]
+DerivableInterfaces = "0.3.8 - 0.3"
+DiagonalArrays = "0.2.2 - 0.2"
