--- a/B/BlockSparseArrays/Deps.toml
+++ b/B/BlockSparseArrays/Deps.toml
@@ -28,3 +28,6 @@ MapBroadcast = "ebd9b9da-f48d-417c-9660-449667d60261"
 
 ["0.2.4 - 0"]
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
+
+["0.2.8 - 0"]
+DiagonalArrays = "74fd4be6-21e2-4f6f-823a-4360d37c7a77"
