New version: UnspecifiedTypes v0.1.2
UUID: 42b3faec-625b-4613-8ddc-352bf9672b8d
Repo:
Tree: f90687ca43f032f00813a3dff11204e3a15c7e73

--- a/U/UnspecifiedTypes/Versions.toml
+++ b/U/UnspecifiedTypes/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "dcb6e91a9344c8e00917fc30d86fe39ed999542e"
 
 ["0.1.1"]
 git-tree-sha1 = "772b82f605c55c1fb36018722f6aa594f0062149"
+
+["0.1.2"]
+git-tree-sha1 = "f90687ca43f032f00813a3dff11204e3a15c7e73"
