New version: BlockSparseArrays v0.2.9
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: 207f4207e70e10c6aaf55ca76cd9c6cecaec70f3

--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "2fc73e2e3756211799989895b08078980b8456a2"
 
 ["0.2.8"]
 git-tree-sha1 = "ff43dca89f9a84117cbf8421174c85742c7fabc9"
+
+["0.2.9"]
+git-tree-sha1 = "207f4207e70e10c6aaf55ca76cd9c6cecaec70f3"
