New version: BlockSparseArrays v0.2.10
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: c0c73bc681eba3b38c6a43c48e075166afc4ddc0

--- a/B/BlockSparseArrays/Compat.toml
+++ b/B/BlockSparseArrays/Compat.toml
@@ -21,6 +21,9 @@ TypeParameterAccessors = "0.1"
 ["0.2 - 0.2.2"]
 Derive = "0.3.1 - 0.3"
 
+["0.2.10 - 0"]
+GPUArraysCore = "0.1 - 0.2"
+
 ["0.2.2 - 0"]
 SparseArraysBase = "0.2.2 - 0.2"
 TypeParameterAccessors = "0.2"
