--- a/B/BlockSparseArrays/Deps.toml
+++ b/B/BlockSparseArrays/Deps.toml
@@ -22,6 +22,9 @@ BroadcastMapConversion = "4a4adec5-520f-4750-bb37-d5e66b4ddeb2"
 ["0.2 - 0.2.2"]
 Derive = "a07dfc7f-7d04-4eb5-84cc-a97f051f655a"
 
+["0.2.10 - 0"]
+GPUArraysCore = "46192b85-c4d5-4398-a991-12ede77f4527"
+
 ["0.2.3 - 0"]
 DerivableInterfaces = "6c5e35bf-e59e-4898-b73c-732dcc4ba65f"
 MapBroadcast = "ebd9b9da-f48d-417c-9660-449667d60261"
