--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "ff43dca89f9a84117cbf8421174c85742c7fabc9"
 
 ["0.2.9"]
 git-tree-sha1 = "207f4207e70e10c6aaf55ca76cd9c6cecaec70f3"
+
+["0.2.10"]
+git-tree-sha1 = "c0c73bc681eba3b38c6a43c48e075166afc4ddc0"
