--- a/T/TensorAlgebra/Versions.toml
+++ b/T/TensorAlgebra/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "75794fd65f979c8b455e582af86cad5d99f0fe1b"
 
 ["0.1.5"]
 git-tree-sha1 = "8db3c95953253fe3affc7c018ba2419e883b7e5c"
+
+["0.1.6"]
+git-tree-sha1 = "0a86c95421f9df78d5e6fbadf9a931ee1b606c37"
