New version: NamedDimsArrays v0.3.6
UUID: 60cbd0c0-df58-4cb7-918c-6f5607b73fde
Repo:
Tree: b70342d65f17c3becbc93e542ed026726968bf69

--- a/N/NamedDimsArrays/Deps.toml
+++ b/N/NamedDimsArrays/Deps.toml
@@ -24,3 +24,6 @@ ArrayLayouts = "4c555306-a7a7-4459-81d9-ec55ddd5c99a"
 ["0.3.4 - 0"]
 DerivableInterfaces = "6c5e35bf-e59e-4898-b73c-732dcc4ba65f"
 MapBroadcast = "ebd9b9da-f48d-417c-9660-449667d60261"
+
+["0.3.6 - 0"]
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
