--- a/N/NamedDimsArrays/Compat.toml
+++ b/N/NamedDimsArrays/Compat.toml
@@ -24,4 +24,10 @@ ArrayLayouts = "1.11.0 - 1"
 
 ["0.3.4 - 0"]
 DerivableInterfaces = "0.3.7 - 0.3"
+
+["0.3.4 - 0.3.5"]
 MapBroadcast = "0.1.5 - 0.1"
+
+["0.3.6 - 0"]
+FillArrays = "1.13.0 - 1"
+MapBroadcast = "0.1.6 - 0.1"
