New version: ITensorBase v0.1.3
UUID: 4795dd04-0d67-49bb-8f44-b89c448a1dc7
Repo:
Tree: c38d8f01c476640662419dafa5e0c15e6b6508e2

--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "b415a3c79627423361d8edb920b3a3eb5b5cc2a5"
 
 ["0.1.2"]
 git-tree-sha1 = "5e2c4ff5992ec44dbfafd1b0d95bfcf00c8df0cf"
+
+["0.1.3"]
+git-tree-sha1 = "c38d8f01c476640662419dafa5e0c15e6b6508e2"
