--- a/I/ITensorBase/Compat.toml
+++ b/I/ITensorBase/Compat.toml
@@ -17,3 +17,6 @@ UnspecifiedTypes = "0.1.1 - 0.1"
 ["0.1.2 - 0"]
 DerivableInterfaces = "0.3.7 - 0.3"
 MapBroadcast = "0.1.5 - 0.1"
+
+["0.1.3 - 0"]
+LinearAlgebra = "1.10.0 - 1"
