New version: ITensorBase v0.1.4
UUID: 4795dd04-0d67-49bb-8f44-b89c448a1dc7
Repo:
Tree: 088f872c6e3cbbaa0806cca443c5f18085fa48af

--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "5e2c4ff5992ec44dbfafd1b0d95bfcf00c8df0cf"
 
 ["0.1.3"]
 git-tree-sha1 = "c38d8f01c476640662419dafa5e0c15e6b6508e2"
+
+["0.1.4"]
+git-tree-sha1 = "088f872c6e3cbbaa0806cca443c5f18085fa48af"
