New version: ITensorBase v0.1.5
UUID: 4795dd04-0d67-49bb-8f44-b89c448a1dc7
Repo:
Tree: 0d56e180ac77ac1e720a70bac51916d08b5db83b

--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "c38d8f01c476640662419dafa5e0c15e6b6508e2"
 
 ["0.1.4"]
 git-tree-sha1 = "088f872c6e3cbbaa0806cca443c5f18085fa48af"
+
+["0.1.5"]
+git-tree-sha1 = "0d56e180ac77ac1e720a70bac51916d08b5db83b"
