New version: TensorAlgebra v0.1.7
UUID: 68bd88dc-f39d-4e12-b2ca-f046b68fcc6a
Repo:
Tree: 8e2d6d893b476ea3fc50324dba18f9dd5831f883

--- a/T/TensorAlgebra/Versions.toml
+++ b/T/TensorAlgebra/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "8db3c95953253fe3affc7c018ba2419e883b7e5c"
 
 ["0.1.6"]
 git-tree-sha1 = "0a86c95421f9df78d5e6fbadf9a931ee1b606c37"
+
+["0.1.7"]
+git-tree-sha1 = "8e2d6d893b476ea3fc50324dba18f9dd5831f883"
