--- a/N/NamedDimsArrays/Versions.toml
+++ b/N/NamedDimsArrays/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "b70342d65f17c3becbc93e542ed026726968bf69"
 
 ["0.3.7"]
 git-tree-sha1 = "f1457fb337a8b5288a17955adbb5ee1641b8efcc"
+
+["0.3.8"]
+git-tree-sha1 = "9d351bc66b9352ebfebe5cffbb9001043709b3c3"
