--- a/N/NamedDimsArrays/Versions.toml
+++ b/N/NamedDimsArrays/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "f1457fb337a8b5288a17955adbb5ee1641b8efcc"
 
 ["0.3.8"]
 git-tree-sha1 = "9d351bc66b9352ebfebe5cffbb9001043709b3c3"
+
+["0.3.9"]
+git-tree-sha1 = "3c5b68c0dd9c9e3ceab643d6f315c62a2edd2fb5"
