New version: ITensorBase v0.1.6
UUID: 4795dd04-0d67-49bb-8f44-b89c448a1dc7
Repo:
Tree: 52420149d9bbe479f94bc20d08d51b89615f2e1c

--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "088f872c6e3cbbaa0806cca443c5f18085fa48af"
 
 ["0.1.5"]
 git-tree-sha1 = "0d56e180ac77ac1e720a70bac51916d08b5db83b"
+
+["0.1.6"]
+git-tree-sha1 = "52420149d9bbe479f94bc20d08d51b89615f2e1c"
