New version: ITensorBase v0.1.7
UUID: 4795dd04-0d67-49bb-8f44-b89c448a1dc7
Repo:
Tree: 40da7a6a37e614acc739ac2f5b520d41e99347d7

--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "0d56e180ac77ac1e720a70bac51916d08b5db83b"
 
 ["0.1.6"]
 git-tree-sha1 = "52420149d9bbe479f94bc20d08d51b89615f2e1c"
+
+["0.1.7"]
+git-tree-sha1 = "40da7a6a37e614acc739ac2f5b520d41e99347d7"
