--- a/N/NamedDimsArrays/Versions.toml
+++ b/N/NamedDimsArrays/Versions.toml
@@ -36,3 +36,6 @@ git-tree-sha1 = "3c5b68c0dd9c9e3ceab643d6f315c62a2edd2fb5"
 
 ["0.3.10"]
 git-tree-sha1 = "ae1cd49081e56bb6ff61d36d904b6d25ef76e5c9"
+
+["0.3.11"]
+git-tree-sha1 = "cb88d8e1e811e698241ffa5fe94905d4aefe7da9"
