New package: ITensorQuantumOperatorDefinitions v0.1.0
UUID: fd9b415b-e710-4e2a-b407-cba023081494
Repo: https://github.com/ITensor/ITensorQuantumOperatorDefinitions.jl.git
Tree: c293fa1c4a65915a4dba7b2502cc6d019ae39599

--- a/Registry.toml
+++ b/Registry.toml
@@ -25,3 +25,4 @@ ebd9b9da-f48d-417c-9660-449667d60261 = { name = "MapBroadcast", path = "M/MapBro
 f856a3a6-4152-4ec4-b2a7-02c1a55d7993 = { name = "LabelledNumbers", path = "L/LabelledNumbers" }
 f8a8ad64-adbc-4fce-92f7-ffe2bb36a86e = { name = "SymmetrySectors", path = "S/SymmetrySectors" }
 f9fb0810-3969-484c-b54e-62935ba8ba22 = { name = "ITensorEntropyTools", path = "I/ITensorEntropyTools" }
+fd9b415b-e710-4e2a-b407-cba023081494 = { name = "ITensorQuantumOperatorDefinitions", path = "I/ITensorQuantumOperatorDefinitions" }
