--- a/I/ITensorQuantumOperatorDefinitions/Versions.toml
+++ b/I/ITensorQuantumOperatorDefinitions/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "c293fa1c4a65915a4dba7b2502cc6d019ae39599"
+
+["0.1.1"]
+git-tree-sha1 = "8560c61337e7f2b034bd81274c2ffb5804ac5eba"
