New version: NamedDimsArrays v0.3.12
UUID: 60cbd0c0-df58-4cb7-918c-6f5607b73fde
Repo:
Tree: 911545380145bcbda054e5891637e60eff1b5c43

--- a/N/NamedDimsArrays/Versions.toml
+++ b/N/NamedDimsArrays/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "ae1cd49081e56bb6ff61d36d904b6d25ef76e5c9"
 
 ["0.3.11"]
 git-tree-sha1 = "cb88d8e1e811e698241ffa5fe94905d4aefe7da9"
+
+["0.3.12"]
+git-tree-sha1 = "911545380145bcbda054e5891637e60eff1b5c43"
