--- a/Registry.toml
+++ b/Registry.toml
@@ -18,6 +18,7 @@ description = "Private registry for unreleased or unfinished ITensors packages"
 6c5e35bf-e59e-4898-b73c-732dcc4ba65f = { name = "DerivableInterfaces", path = "D/DerivableInterfaces" }
 74fd4be6-21e2-4f6f-823a-4360d37c7a77 = { name = "DiagonalArrays", path = "D/DiagonalArrays" }
 7e5a90cf-f82e-492e-a09b-e3e26432c138 = { name = "TypeParameterAccessors", path = "T/TypeParameterAccessors" }
+826dd319-6fd5-459a-a990-3a4f214664bf = { name = "QuantumOperatorDefinitions", path = "Q/QuantumOperatorDefinitions" }
 a07dfc7f-7d04-4eb5-84cc-a97f051f655a = { name = "Derive", path = "D/Derive" }
 c7a6d0f7-daa6-4368-ba67-89ed64127c3b = { name = "QuantumOperatorAlgebra", path = "Q/QuantumOperatorAlgebra" }
 e204200e-d7ba-4b7e-bfa9-053a2e530198 = { name = "WidenableArrays", path = "W/WidenableArrays" }
