New version: QuantumOperatorDefinitions v0.1.1
UUID: 826dd319-6fd5-459a-a990-3a4f214664bf
Repo:
Tree: 2845435527dd8c5930a3f54ecb80d442f5572083

--- a/Q/QuantumOperatorDefinitions/Versions.toml
+++ b/Q/QuantumOperatorDefinitions/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "cf69ca1a1d820f5284cc3ec1f60921b30778aa8a"
+
+["0.1.1"]
+git-tree-sha1 = "2845435527dd8c5930a3f54ecb80d442f5572083"
