New version: ITensorBase v0.1.10
UUID: 4795dd04-0d67-49bb-8f44-b89c448a1dc7
Repo:
Tree: a113ea682897675663f4cf10c61c1848131afdcd

--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "dbe724956aefa7f5628e82c577337faef474879b"
 
 ["0.1.9"]
 git-tree-sha1 = "f003c2a949ed692b15516ee601f605dccd7df31d"
+
+["0.1.10"]
+git-tree-sha1 = "a113ea682897675663f4cf10c61c1848131afdcd"
