--- a/Q/QuantumOperatorDefinitions/Versions.toml
+++ b/Q/QuantumOperatorDefinitions/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "2845435527dd8c5930a3f54ecb80d442f5572083"
 
 ["0.1.2"]
 git-tree-sha1 = "9db5e6849f558d4a0e26c0bbf4b4ec97cf63b01f"
+
+["0.1.3"]
+git-tree-sha1 = "dfe1c2bf45f07b28addda8a2a54ef6efc60a0d25"
