--- a/Q/QuantumOperatorDefinitions/Versions.toml
+++ b/Q/QuantumOperatorDefinitions/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "9db5e6849f558d4a0e26c0bbf4b4ec97cf63b01f"
 
 ["0.1.3"]
 git-tree-sha1 = "dfe1c2bf45f07b28addda8a2a54ef6efc60a0d25"
+
+["0.1.4"]
+git-tree-sha1 = "e112c220ccb8f89fafd0352ca505633cf894a7f7"
