New version: DiagonalArrays v0.2.3
UUID: 74fd4be6-21e2-4f6f-823a-4360d37c7a77
Repo:
Tree: f5bac4df77367d0531c34bc18bc081e6f3b9b948

--- a/D/DiagonalArrays/Versions.toml
+++ b/D/DiagonalArrays/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "ac6589450ba099f00aa9d74e6e0915b49f56f1bd"
 
 ["0.2.2"]
 git-tree-sha1 = "74b26dd5ac918c776caa6a13c8b9989a9d2aa56f"
+
+["0.2.3"]
+git-tree-sha1 = "f5bac4df77367d0531c34bc18bc081e6f3b9b948"
