--- a/D/DiagonalArrays/Deps.toml
+++ b/D/DiagonalArrays/Deps.toml
@@ -17,3 +17,6 @@ DerivableInterfaces = "6c5e35bf-e59e-4898-b73c-732dcc4ba65f"
 
 ["0.2.2 - 0"]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
+["0.2.3 - 0"]
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
