--- a/Registry.toml
+++ b/Registry.toml
@@ -14,6 +14,7 @@ description = "Private registry for unreleased or unfinished ITensors packages"
 4795dd04-0d67-49bb-8f44-b89c448a1dc7 = { name = "ITensorBase", path = "I/ITensorBase" }
 4a4adec5-520f-4750-bb37-d5e66b4ddeb2 = { name = "BroadcastMapConversion", path = "B/BroadcastMapConversion" }
 60cbd0c0-df58-4cb7-918c-6f5607b73fde = { name = "NamedDimsArrays", path = "N/NamedDimsArrays" }
+680c2d7c-f67a-4cc9-ae9c-da132b1447a5 = { name = "BackendSelection", path = "B/BackendSelection" }
 68bd88dc-f39d-4e12-b2ca-f046b68fcc6a = { name = "TensorAlgebra", path = "T/TensorAlgebra" }
 6c5e35bf-e59e-4898-b73c-732dcc4ba65f = { name = "DerivableInterfaces", path = "D/DerivableInterfaces" }
 74fd4be6-21e2-4f6f-823a-4360d37c7a77 = { name = "DiagonalArrays", path = "D/DiagonalArrays" }
