New version: ITensorBase v0.1.12
UUID: 4795dd04-0d67-49bb-8f44-b89c448a1dc7
Repo:
Tree: d94c562973b72b74fc2b33a58d6cfdc0ae9a4513

--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "a113ea682897675663f4cf10c61c1848131afdcd"
 
 ["0.1.11"]
 git-tree-sha1 = "789a08795e92af910742a0a247b2e8ab6456f4f6"
+
+["0.1.12"]
+git-tree-sha1 = "d94c562973b72b74fc2b33a58d6cfdc0ae9a4513"
