New version: ITensorBase v0.1.13
UUID: 4795dd04-0d67-49bb-8f44-b89c448a1dc7
Repo:
Tree: 85c2e2c294c169e60838d295ff5eef95f62ca2f8

--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -36,3 +36,6 @@ git-tree-sha1 = "789a08795e92af910742a0a247b2e8ab6456f4f6"
 
 ["0.1.12"]
 git-tree-sha1 = "d94c562973b72b74fc2b33a58d6cfdc0ae9a4513"
+
+["0.1.13"]
+git-tree-sha1 = "85c2e2c294c169e60838d295ff5eef95f62ca2f8"
