New version: QuantumOperatorDefinitions v0.1.5
UUID: 826dd319-6fd5-459a-a990-3a4f214664bf
Repo:
Tree: 72b5fb4e7a07235c96899bf490d078815092e9b4

--- a/Q/QuantumOperatorDefinitions/Versions.toml
+++ b/Q/QuantumOperatorDefinitions/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "dfe1c2bf45f07b28addda8a2a54ef6efc60a0d25"
 
 ["0.1.4"]
 git-tree-sha1 = "e112c220ccb8f89fafd0352ca505633cf894a7f7"
+
+["0.1.5"]
+git-tree-sha1 = "72b5fb4e7a07235c96899bf490d078815092e9b4"
