--- a/Q/QuantumOperatorDefinitions/WeakCompat.toml
+++ b/Q/QuantumOperatorDefinitions/WeakCompat.toml
@@ -1,2 +1,9 @@
 ["0.1.3 - 0"]
 ITensorBase = "0.1.10 - 0.1"
+
+["0.1.5 - 0"]
+BlockArrays = "1.3.0 - 1"
+GradedUnitRanges = "0.1.2 - 0.1"
+LabelledNumbers = "0.1"
+NamedDimsArrays = "0.4"
+SymmetrySectors = "0.1.3 - 0.1"
