New version: QuantumOperatorDefinitions v0.1.6
UUID: 826dd319-6fd5-459a-a990-3a4f214664bf
Repo:
Tree: 8abe005fd4d9b6575f898694e258cad098b6fc15

--- a/Q/QuantumOperatorDefinitions/Versions.toml
+++ b/Q/QuantumOperatorDefinitions/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "e112c220ccb8f89fafd0352ca505633cf894a7f7"
 
 ["0.1.5"]
 git-tree-sha1 = "72b5fb4e7a07235c96899bf490d078815092e9b4"
+
+["0.1.6"]
+git-tree-sha1 = "8abe005fd4d9b6575f898694e258cad098b6fc15"
