--- a/S/SparseArraysBase/Compat.toml
+++ b/S/SparseArraysBase/Compat.toml
@@ -24,6 +24,9 @@ Derive = "0.3"
 ["0.2.1 - 0.2.2"]
 Derive = "0.3.6 - 0.3"
 
+["0.2.11 - 0"]
+FillArrays = "1.13.0 - 1"
+
 ["0.2.3 - 0"]
 DerivableInterfaces = "0.3.7 - 0.3"
 MapBroadcast = "0.1.5 - 0.1"
