--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "d94c562973b72b74fc2b33a58d6cfdc0ae9a4513"
 
 ["0.1.13"]
 git-tree-sha1 = "85c2e2c294c169e60838d295ff5eef95f62ca2f8"
+
+["0.1.14"]
+git-tree-sha1 = "5a6422a3d878c49d270a24b0248c6bb3d5cb9dbc"
