--- a/I/ITensorBase/WeakDeps.toml
+++ b/I/ITensorBase/WeakDeps.toml
@@ -1,2 +1,5 @@
 ["0.1.11 - 0"]
 DiagonalArrays = "74fd4be6-21e2-4f6f-823a-4360d37c7a77"
+
+["0.1.14 - 0"]
+SparseArraysBase = "0d5efcca-f356-4864-8770-e1ed8d78f208"
