--- a/D/DerivableInterfaces/Versions.toml
+++ b/D/DerivableInterfaces/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "5e859e8e7f961c0e63536b353857a4fdb1a87b21"
 
 ["0.3.8"]
 git-tree-sha1 = "367be1ad2c772c74b315f4f3864eca6f561cc54a"
+
+["0.3.9"]
+git-tree-sha1 = "23bdbe70584c15e95f534038bda9b0e9d54d3b15"
