New version: GradedUnitRanges v0.1.3
UUID: e2de450a-8a67-46c7-b59c-01d5a3d041c5
Repo:
Tree: d98b566386fe9330a27e3781b3e3fabb181a4035

--- a/G/GradedUnitRanges/Versions.toml
+++ b/G/GradedUnitRanges/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "1ecc950f272ca20a415052f460ccf27973087685"
 
 ["0.1.2"]
 git-tree-sha1 = "e6081e589123b98cae0395e20be300948bcff6e7"
+
+["0.1.3"]
+git-tree-sha1 = "d98b566386fe9330a27e3781b3e3fabb181a4035"
