New version: DerivableInterfaces v0.3.10
UUID: 6c5e35bf-e59e-4898-b73c-732dcc4ba65f
Repo:
Tree: 12fadb9b970065592c8740c787b0727a2bd3b1d8

--- a/D/DerivableInterfaces/Versions.toml
+++ b/D/DerivableInterfaces/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "367be1ad2c772c74b315f4f3864eca6f561cc54a"
 
 ["0.3.9"]
 git-tree-sha1 = "23bdbe70584c15e95f534038bda9b0e9d54d3b15"
+
+["0.3.10"]
+git-tree-sha1 = "12fadb9b970065592c8740c787b0727a2bd3b1d8"
