--- a/D/DerivableInterfaces/Compat.toml
+++ b/D/DerivableInterfaces/Compat.toml
@@ -6,3 +6,6 @@ LinearAlgebra = "1.10.0 - 1"
 MLStyle = "0.4.17 - 0.4"
 MapBroadcast = "0.1.5 - 0.1"
 julia = "1.10.0 - 1"
+
+["0.3.12 - 0"]
+TypeParameterAccessors = "0.2"
