New version: MapBroadcast v0.1.7
UUID: ebd9b9da-f48d-417c-9660-449667d60261
Repo:
Tree: f735e853fb5dec9e42fc1959deecfe100db4a8f9

--- a/M/MapBroadcast/Versions.toml
+++ b/M/MapBroadcast/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "45491d83c46d1045358bd914b37676dc14a9e141"
 
 ["0.1.6"]
 git-tree-sha1 = "8f88e77938d3e1ef137646a003cc1fed9bd62162"
+
+["0.1.7"]
+git-tree-sha1 = "f735e853fb5dec9e42fc1959deecfe100db4a8f9"
