New version: DerivableInterfaces v0.3.14
UUID: 6c5e35bf-e59e-4898-b73c-732dcc4ba65f
Repo:
Tree: 1d2da01c828947b2ee5ab730f6c6dd29f6b74136

--- a/D/DerivableInterfaces/Versions.toml
+++ b/D/DerivableInterfaces/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "12fadb9b970065592c8740c787b0727a2bd3b1d8"
 
 ["0.3.12"]
 git-tree-sha1 = "78cbc5d17cc12baf04739b0e6e5085a25fbfc58b"
+
+["0.3.14"]
+git-tree-sha1 = "1d2da01c828947b2ee5ab730f6c6dd29f6b74136"
