New version: BlockSparseArrays v0.2.12
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: da110a117d3055cbdb03cdb98697a4cbd8511423

--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "c0c73bc681eba3b38c6a43c48e075166afc4ddc0"
 
 ["0.2.11"]
 git-tree-sha1 = "be51acff858d8bb8019fbfbf75448e5813803b2c"
+
+["0.2.12"]
+git-tree-sha1 = "da110a117d3055cbdb03cdb98697a4cbd8511423"
