--- a/G/GradedUnitRanges/Versions.toml
+++ b/G/GradedUnitRanges/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "e6081e589123b98cae0395e20be300948bcff6e7"
 
 ["0.1.3"]
 git-tree-sha1 = "d98b566386fe9330a27e3781b3e3fabb181a4035"
+
+["0.1.4"]
+git-tree-sha1 = "75a8da51ed00e4e5924568eddaf8a7e9e985165b"
