New version: NamedDimsArrays v0.4.1
UUID: 60cbd0c0-df58-4cb7-918c-6f5607b73fde
Repo:
Tree: 60039f92cdba5b4df63034de688c67ed1990f93c

--- a/N/NamedDimsArrays/Versions.toml
+++ b/N/NamedDimsArrays/Versions.toml
@@ -45,3 +45,6 @@ git-tree-sha1 = "911545380145bcbda054e5891637e60eff1b5c43"
 
 ["0.4.0"]
 git-tree-sha1 = "b310178db8b4679f887ea47621ab9d6f22a0e990"
+
+["0.4.1"]
+git-tree-sha1 = "60039f92cdba5b4df63034de688c67ed1990f93c"
