New version: ITensorBase v0.1.15
UUID: 4795dd04-0d67-49bb-8f44-b89c448a1dc7
Repo:
Tree: ec3873ff345fdb5a51db48e77599138dcc0db339

--- a/I/ITensorBase/WeakCompat.toml
+++ b/I/ITensorBase/WeakCompat.toml
@@ -3,3 +3,6 @@ DiagonalArrays = "0.2.3 - 0.2"
 
 ["0.1.14 - 0"]
 SparseArraysBase = "0.2.11 - 0.2"
+
+["0.1.15 - 0"]
+GradedUnitRanges = "0.1.4 - 0.1"
