--- a/I/ITensorBase/Versions.toml
+++ b/I/ITensorBase/Versions.toml
@@ -42,3 +42,6 @@ git-tree-sha1 = "85c2e2c294c169e60838d295ff5eef95f62ca2f8"
 
 ["0.1.14"]
 git-tree-sha1 = "5a6422a3d878c49d270a24b0248c6bb3d5cb9dbc"
+
+["0.1.15"]
+git-tree-sha1 = "ec3873ff345fdb5a51db48e77599138dcc0db339"
