--- a/I/ITensorBase/WeakDeps.toml
+++ b/I/ITensorBase/WeakDeps.toml
@@ -3,3 +3,6 @@ DiagonalArrays = "74fd4be6-21e2-4f6f-823a-4360d37c7a77"
 
 ["0.1.14 - 0"]
 SparseArraysBase = "0d5efcca-f356-4864-8770-e1ed8d78f208"
+
+["0.1.15 - 0"]
+GradedUnitRanges = "e2de450a-8a67-46c7-b59c-01d5a3d041c5"
