New version: GradedUnitRanges v0.1.5
UUID: e2de450a-8a67-46c7-b59c-01d5a3d041c5
Repo:
Tree: 3ee18bd98d1d05c7eb2917bf345f42b133df44b6

--- a/G/GradedUnitRanges/Versions.toml
+++ b/G/GradedUnitRanges/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "d98b566386fe9330a27e3781b3e3fabb181a4035"
 
 ["0.1.4"]
 git-tree-sha1 = "75a8da51ed00e4e5924568eddaf8a7e9e985165b"
+
+["0.1.5"]
+git-tree-sha1 = "3ee18bd98d1d05c7eb2917bf345f42b133df44b6"
