New version: BlockSparseArrays v0.2.13
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: f935221d5d93c9392737706cca2cf6121cde83a1

--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -36,3 +36,6 @@ git-tree-sha1 = "be51acff858d8bb8019fbfbf75448e5813803b2c"
 
 ["0.2.12"]
 git-tree-sha1 = "da110a117d3055cbdb03cdb98697a4cbd8511423"
+
+["0.2.13"]
+git-tree-sha1 = "f935221d5d93c9392737706cca2cf6121cde83a1"
