New version: BlockSparseArrays v0.2.14
UUID: 2c9a651f-6452-4ace-a6ac-809f4280fbb4
Repo:
Tree: b5bc6fa01fa5afb7d7886559544cc2c15e5abd4d

--- a/B/BlockSparseArrays/Versions.toml
+++ b/B/BlockSparseArrays/Versions.toml
@@ -39,3 +39,6 @@ git-tree-sha1 = "da110a117d3055cbdb03cdb98697a4cbd8511423"
 
 ["0.2.13"]
 git-tree-sha1 = "f935221d5d93c9392737706cca2cf6121cde83a1"
+
+["0.2.14"]
+git-tree-sha1 = "b5bc6fa01fa5afb7d7886559544cc2c15e5abd4d"
