--- a/I/ITensorPkgSkeleton/Versions.toml
+++ b/I/ITensorPkgSkeleton/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "d93b8023c911abfb42cfcb14a9d21a158a117dd0"
 
 ["0.2.1"]
 git-tree-sha1 = "472520c83b14ed8760f51eb7897b14bf011b13ba"
+
+["0.2.3"]
+git-tree-sha1 = "953270cbd5e2d4ef15a138ae584007bc77a852bf"
